# nub

./: .env_example  .gitignore  README.md  pyproject.toml  requirements.txt  runner.py
nub/: __init__.py  commands.py  config.py  database.py  logging_config.py  ollama_service.py  ollama_summary.py  prompts.py  schema.sql  summarize.py  utils.py  video_info.py
